fix: padding for info and align items for announcement

--- a/hlx_statics/blocks/announcement/announcement.css
+++ b/hlx_statics/blocks/announcement/announcement.css
@@ -86,6 +86,7 @@ main div.announcement-wrapper .announcement.end>div {
 
 main div.announcement-wrapper .announcement.end>div>div {
   width: 750px;
+  align-items: end;
 }
 
 main div.announcement-wrapper .announcement .announcement-heading {
